--- a/assets/styles/ava.css
+++ b/assets/styles/ava.css
@@ -176,7 +176,7 @@ border-top: solid 0.3125rem #33363D
     /* #foot(footftkxsoham8f) #css starts */
 .footftkxsoham8f h3{    
     margin-left: 15px;
-    color: #37423b
+    color: #33363D
 }
 .footftkxsoham8f h3 .social{
     margin-left: 5px
@@ -185,14 +185,14 @@ border-top: solid 0.3125rem #33363D
     margin-left: -4px
 }
 .footftkxsoham8f .nav .nav-link{
-    color: #050D13
+    color: #33363D
 }
 .footftkxsoham8f .nav-link:focus, 
 .footftkxsoham8f .nav-link:hover {
     font-weight: bold;
 }
 .footftkxsoham8f .fab{
-    color: #050D13
+    color: #33363D
 }
 .footftkxsoham8f .lead {
     margin-left: 15px
